--- a/style.css
+++ b/style.css
@@ -61,10 +61,17 @@ main {
     /* width: 120%; */
 }
 
-.intro {
-    padding-bottom: 125px;
+.intro1 {
+    padding-bottom: 60px;
     padding-left: 30px;
     font-size: 20px;
+}
+
+.intro2{
+    /* padding-top: 150px;
+    padding-left:30px;
+    font-size: 20px; */
+    padding-left:30px;
 }
 
 .Title{
